force-app/main/default/objects/IndividualGDPRState__dlm/IndividualGDPRState__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>System</creationType>
        <dataModelTaxonomy
    >Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>IndividualGDPRState</labelOverride>
        <masterLabel>IndividualGDPRState</masterLabel>
        <objectCategory
    >Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
        <referenceEntityName>IndividualGDPRState</referenceEntityName>
    </mktDataModelAttributes>
</CustomObject>