force-app/main/default/objects/IndividualGDPRState__dlm/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <label>Created Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Created Date</labelOverride>
        <masterLabel>Created Date</masterLabel>
        <refAttrDeveloperName>CreatedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>