force-app/main/default/objects/IndividualGDPRState__dlm/fields/DataSourceObject__c.field-meta.xml
<CustomField>
    <fullName>DataSourceObject__c</fullName>
    <label>Data Source Object</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Data Source Object</labelOverride>
        <masterLabel>Data Source Object</masterLabel>
        <refAttrDeveloperName>DataSourceObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>