force-app/main/default/objects/IndividualGDPRState__dlm/fields/HasOptedOutProcessing__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutProcessing__c</fullName>
    <label>Do Not Process</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Do Not Process</labelOverride>
        <masterLabel>Do Not Process</masterLabel>
        <refAttrDeveloperName>HasOptedOutProcessing</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>