force-app/main/default/objects/IndividualGDPRState__dlm/fields/LastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedBy__c</fullName>
    <label>Last Modified By</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Last Modified By</labelOverride>
        <masterLabel>Last Modified By</masterLabel>
        <refAttrDeveloperName>LastModifiedBy</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>