force-app/main/default/objects/IndividualGDPRState__dlm/fields/OptOutProcessRequestDate__c.field-meta.xml
<CustomField>
    <fullName>OptOutProcessRequestDate__c</fullName>
    <label>Opt Out Process Request Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Opt Out Process Request Date</labelOverride>
        <masterLabel>Opt Out Process Request Date</masterLabel>
        <refAttrDeveloperName>OptOutProcessRequestDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>