force-app/main/default/objects/IndividualGDPRState__dlm/fields/SendIndividualData__c.field-meta.xml
<CustomField>
    <fullName>SendIndividualData__c</fullName>
    <label>Export Individual&apos;s Data</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Export Individual&apos;s Data</labelOverride>
        <masterLabel>Export Individual&apos;s Data</masterLabel>
        <refAttrDeveloperName>SendIndividualData</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>