force-app/main/default/objects/IndividualGDPRState__dlm/fields/SendIndividualDataRequestCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>SendIndividualDataRequestCompletionDate__c</fullName>
    <label>SendIndividualDataRequestCompletionDate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>SendIndividualDataRequestCompletionDate</labelOverride>
        <masterLabel>SendIndividualDataRequestCompletionDate</masterLabel>
        <refAttrDeveloperName
    >SendIndividualDataRequestCompletionDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>