force-app/main/default/objects/IndividualGDPRState__dlm/fields/ShouldForgetRequestCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>ShouldForgetRequestCompletionDate__c</fullName>
    <label>Should Forget Request Completion Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Should Forget Request Completion Date</labelOverride>
        <masterLabel>Should Forget Request Completion Date</masterLabel>
        <refAttrDeveloperName
    >ShouldForgetRequestCompletionDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>